# group_c

./: .gitignore  .lefthook.yml  README.md  hypertune.py  pyproject.toml
hypertune/: hypertune.ipynb  hypertune.py
notebooks/: 01_explore-heart.ipynb  02_2D-models.ipynb  03_1D-models.ipynb  config.toml
notebooks/Imbalance dataset handling/: 01_explore-heart_SA.ipynb  02_2D-models_SA_Cutoff.ipynb  02_2D-models_SA_Oversampling.ipynb  02_2D-models_SA_OversamplingCutoff.ipynb  02_2D-models_SA_Undersampling.ipynb  02_2D-models_SA_Weights.ipynb  02_2D-models_SA_Weights_Centralized.ipynb  02_2D-models_SA_Weights_int.ipynb  03_1D-models_SA_Oversampling.ipynb  03_1D-models_SA_Undersampling.ipynb  03_1D-models_SA_Weights.ipynb  config.toml
notebooks/Imbalance dataset handling/mlruns/0/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/097622d7a6d1494c83a5fa6302a47207/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/0f6451ac974f4776ac059527366ac9dd/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/187b23cb435e4a3cb1432eadedcb53bd/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/26490f7dcd6a4cf39115b183299c11d8/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/276f99bdd6014bf6858a7a8bc0baff8e/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/2783d48eae0a48908174e293baa84986/: meta.yaml
notebooks/Imbalance dataset handling/mlruns/0/28a3b83b639f4d2090c90b74b961e709/: meta.yaml
src/mads_hackathon/: datasets.py  metrics.py  models.py
(+349 files in other folders)
